--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -9,8 +9,8 @@ $blue: #4183C4;
 // Grays
 $black: #000;
 $darkerGray: #222;
-$darkGray: #333;
-$gray: #666;
+$darkGray: #313131;
+$gray: #b1aeae;
 $lightGray: #eee;
 $white: #fff;
 
