--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="https://rho.mycda.app" target="_blank">RhoApp</a>
           </nav>
         </header>
       </div>
