--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,11 +28,14 @@
     <link rel="icon" type="image/png" sizes="96x96" href="/images/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
     <link rel="manifest" href="/images/icons/manifest.json">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
   </head>
 
   <body>
     <div class="wrapper-masthead">
-      <div class="container">
+      <div class="headercontainer">
         <header class="masthead clearfix">
           <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
@@ -45,6 +48,7 @@
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="https://rho.mycda.app" target="_blank">RhoApp</a>
+            {% include social-icons.html %}
           </nav>
         </header>
       </div>
@@ -57,7 +61,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          {% include svg-icons.html %}
+          &copy; 2019 Marius Popovici
         </footer>
       </div>
     </div>
