--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,52 +106,35 @@
   </head>
 
   <body>
-    <div class="wrapper-masthead">
-      <div class="headercontainer">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"
-            ><img src="{{ site.avatar }}"
-          /></a>
+    <div class="wrap">
+      <div class="wrapper-masthead">
+        <div class="headercontainer">
+          <header class="masthead clearfix">
+            <a href="{{ site.baseurl }}/" class="site-avatar"
+              ><img src="{{ site.avatar }}"
+            /></a>
 
-          <div class="site-info">
-            <h1 class="site-name">
-              <a href="{{ site.baseurl }}/">{{ site.name }}</a>
-            </h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
+            <div class="site-info">
+              <h1 class="site-name">
+                <a href="{{ site.baseurl }}/">{{ site.name }}</a>
+              </h1>
+              <p class="site-description">{{ site.description }}</p>
+            </div>
 
-          <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a> {% include
-            social-icons.html %}
-          </nav>
-        </header>
+            <nav>
+              <a href="{{ site.baseurl }}/">Blog</a>
+              <a href="{{ site.baseurl }}/about">About</a> {% include
+              social-icons.html %}
+            </nav>
+          </header>
+        </div>
       </div>
-    </div>
 
-    <div id="main" role="main" class="container">
-      {{ content }}
-
-      <!-- Showing buttons to move to the next and to the previous list of posts (pager buttons). -->
-      {% if paginator.total_pages > 1 %}
-      <ul class="pager">
-        {% if paginator.previous_page %}
-        <li class="previous">
-          <a
-            href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}"
-            >&larr; Newer Posts</a
-          >
-        </li>
-        {% endif %} {% if paginator.next_page %}
-        <li class="next">
-          <a
-            href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}"
-            >Older Posts &rarr;</a 
-          >
-        </li>
-        {% endif %}
-      </ul>
-      {% endif %}
+      <div id="main" role="main" class="container">
+        {{ content }}
+        <div class="footer-push"></div>
+      </div>
+      
     </div>
 
     <div class="wrapper-footer">
@@ -159,7 +142,7 @@
         <footer class="footer">&copy; 2019 Marius Popovici</footer>
       </div>
     </div>
-
+    
     {% include analytics.html %}
   </body>
 </html>
