--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@ body {
   background: $darkGray;
   font: 18px/1.4 $helvetica;
   color: $lightGray;
-  height: 100%;
+  min-height: 100vh;
 }
 
 #page-wrap {
@@ -52,7 +52,6 @@ body {
 .center {
   text-align: center;
 }
-
 
 h1,
 h2,
@@ -284,19 +283,20 @@ nav {
   float: left;
   padding: 8px 16px;
   text-decoration: none;
-  transition: background-color .3s;
+  transition: background-color 0.3s;
   border: 1px solid $darkGray;
   margin: 0 4px;
 }
 
 .pagination a.active {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
-  border: 1px solid #4CAF50;
+  border: 1px solid #4caf50;
 }
 
-.pagination a:hover:not(.active) {background-color: #ddd;}
-
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+}
 
 //
 // .main
@@ -339,7 +339,8 @@ nav {
   background-color: $darkGray;
 }
 
-.footer-push, footer {
+.footer-push,
+footer {
   padding: 25px 0;
   text-align: center;
   height: $footerHeight;
