--- a/style.scss
+++ b/style.scss
@@ -53,6 +53,27 @@ body {
   text-align: center;
 }
 
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  border: 1px solid $darkerGray;
+}
+
+th {
+  color: $white;
+  text-align: left;
+  background: $darkerGray;
+  border: 1px solid $darkerGray;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+td {
+  border: 1px solid $darkerGray;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 h1,
 h2,
 h3,
