--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,7 +111,7 @@
         <div class="headercontainer">
           <header class="masthead clearfix">
             <a href="{{ site.baseurl }}/" class="site-avatar"
-              ><img src="{{ site.avatar }}"
+              ><img src="{{ site.avatar }}" alt="Avatar"
             /></a>
 
             <div class="site-info">
