--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -9,8 +9,8 @@
     <meta name="description" content="{{ page.excerpt| strip_html }}" />
     <meta property="og:description" content="{{ page.excerpt| strip_html }}" />
     {% else %}
-    <meta name="description" content="{{ site.description }}">
-    <meta property="og:description" content="{{ site.description }}" />
+    <meta name="description" content="{{ site.long_description }}">
+    <meta property="og:description" content="{{ site.long_description }}" />
     {% endif %}
     <meta name="author" content="{{ site.name }}" />
 
