--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
+    
     <link
       rel="stylesheet"
       type="text/css"
