--- a/style.scss
+++ b/style.scss
@@ -57,6 +57,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
   border: 1px solid $darkerGray;
+  width: 100%;
+  overflow-y: auto;
+  margin: 0 0 1em;
 }
 
 th {
