--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,51 +27,10 @@
     />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
-
-    <link
-      rel="apple-touch-icon"
-      sizes="57x57"
-      href="/assets/images/icons/apple-icon-57x57.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="60x60"
-      href="/assets/images/icons/apple-icon-60x60.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="/assets/images/icons/apple-icon-72x72.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="/assets/images/icons/apple-icon-76x76.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="/assets/images/icons/apple-icon-114x114.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="/assets/images/icons/apple-icon-120x120.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="144x144"
-      href="/assets/images/icons/apple-icon-144x144.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="/assets/images/icons/apple-icon-152x152.png"
-    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/assets/images/icons/apple-icon-180x180.png"
+      href="/assets/images/icons/apple-touch-icon.png"
     />
     <link
       rel="icon"
@@ -79,17 +38,14 @@
       sizes="192x192"
       href="/assets/images/icons/android-icon-192x192.png"
     />
+
+    <link rel="icon" href="/assets/images/icons/android-icon-192x192.png/favicon.ico" type="image/x-icon"/>
+
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="/assets/images/icons/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="/assets/images/icons/favicon-96x96.png"
     />
     <link
       rel="icon"
@@ -127,7 +83,8 @@
 
             <nav>
               <a href="{{ site.baseurl }}/">Blog</a>
-              <a href="{{ site.baseurl }}/about">About</a> {% include
+              <a href="{{ site.baseurl }}/faq">FAQ</a>
+              <a href="https://mycda.app">Launch App</a> {% include
               social-icons.html %}
             </nav>
           </header>
@@ -142,7 +99,7 @@
 
     <div class="wrapper-footer">
       <div class="container">
-        <footer class="footer">&copy; 2019 Marius Popovici</footer>
+        <footer class="footer">&copy; 2019 MyCda.App</footer>
       </div>
     </div>
 
